--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/node": "^20.14.10",
     "dotenv": "^16.4.5",
     "eslint": "^9.6.0",
     "module-alias": "^2.2.3",
